# cifra-k_test

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py
docker/env/: .env.dev
news/: admin.py  models.py  urls.py  views.py
news/templates/news/: news_list.html
templates/: base.html
