[tool.poetry]
name = "cifra-k-test"
version = "0.1.0"
description = ""
authors = ["Anton Savenchuk <Anton.Savenchuk@gmail.com>"]
readme = "README.md"
packages = [{include = "cifra_k_test"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"
django-summernote = "^0.8.20.0"

[tool.poetry.dev-dependencies]
black = "*"
dlint = "*"
pep8-naming = "*"
flake8 = "*"
flake8-annotations-complexity = "*"
flake8-bandit = "*"
flake8-black = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-class-attributes-order = "*"
flake8-cognitive-complexity = "*"
flake8-commas = "*"
flake8-docstrings = "*"
flake8-expression-complexity = "*"
flake8-functions = "*"
flake8-import-order = "*"
flake8-length = "*"
flake8-quotes = "*"
flake8-variables-names = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
